--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
+<nav>
+  <a href="/" class="navbar-brand">User Search</a>
+</nav>
+<div class="/">
+  <form action="/" class="form">
+    <div class="/">
+      <input type="search" placeholder="github user">
+    </div>
+    <div class="/">
+      <input type="submit" placeholder="submit">
+    </div>
+  </form>
+</div>
+
 
 <router-outlet></router-outlet>
+<app-github-app></app-github-app>
