--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="/" class="navbar-brand">User Search</a>
+  <a href="/" class="navbar-brand">Github User Search</a>
 </nav>
 <div class="/">
   <form action="/" class="form">
