update root .ts component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="/">
   <form action="/" class="form">
     <div class="/">
-      <input type="search" placeholder="github user">
+      <input [(ngModel)]="githubUserQuery" name="user" type="search" placeholder="github user">
     </div>
     <div class="/">
       <input type="submit" placeholder="submit">
