edit app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <div class="/">
       <input [(ngModel)]="githubUserQuery" name="user" type="search" placeholder="github user">
     </div>
+    {{githubUserQuery}}
     <div class="/">
       <input type="submit" placeholder="submit">
     </div>
