--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,4 @@
 <router-outlet></router-outlet>
 <app-github-app></app-github-app>
 <app-github-profile></app-github-profile>
+<app-github-profile-card></app-github-profile-card>
