update3 root template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,4 @@
 <app-github-app></app-github-app>
 <app-github-profile></app-github-profile>
 <app-github-profile-card></app-github-profile-card>
+<app-github-repos></app-github-repos>
