update profile details

--- a/src/app/components/github-profile-data/github-profile-data.component.html
+++ b/src/app/components/github-profile-data/github-profile-data.component.html
@@ -1,1 +1,4 @@
-<p>github-profile-data works!</p>
+<!-- <p>github-profile-data works!</p> -->
+<div class="details">
+    <h3>Profile Details</h3>
+</div>
